[project]
name = "ditainer"
version = "0.4.36"
description = "Dependency Injection Container for Python"
authors = [
    { name = "Damian Ontivero", email = "damian.ontivero.dev@gmail.com" },
]
dependencies = ["pyyaml>=6.0.1"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/damian-ontivero/ditainer"
Repository = "https://github.com/damian-ontivero/ditainer"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["src/ditainer"]
source-includes = ["tests", "LICENSE", "README.md"]

[tool.pdm.dev-dependencies]
dev = ["pre-commit>=3.8.0"]
debug = ["ipdb>=0.13.13"]
format = ["ruff>=0.5.6"]
test = ["pytest>=8.3.2"]

[tool.pdm.scripts]
"lint" = { cmd = "ruff check --fix" }
"format" = { cmd = "ruff format" }
"test" = { cmd = "pytest tests -vs" }


[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    # isort
    "I",
]

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["ditainer"]
